Layout changes in home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Lepak_app</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="car">Car</string>
+    <string name="enter_number">Enter Number</string>
+    <string name="bike">Bike</string>
+    <string name="show_all">Show All</string>
 </resources>
