lepak 35........Summary tickets Print wityh zone and site name,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,4 +209,5 @@
     <string name="ex_io">ex I</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_black_list">BlackList</string>
 </resources>
